--- a/src/assets/styles/aboutproduct.css
+++ b/src/assets/styles/aboutproduct.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700&display=swap");
 
-:root{
-    --mainfont: 'Barlow', sans-serif;
+:root {
+  --mainfont: "Barlow", sans-serif;
 }
-.about-product{
-width: 100%;
-background-color: #E6E6E6;
-background-size: cover;
-background-position: center;
-margin-top: 5rem;
+.about-product {
+  width: 100%;
+  background-color: #e6e6e6;
+  background-size: cover;
+  background-position: center;
+  margin-top: 5rem;
 }
 .--about-container {
   position: relative;
@@ -35,6 +35,7 @@ margin-top: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 2.5rem;
 }
 .--aboutimg-container {
@@ -70,7 +71,7 @@ margin-top: 5rem;
   line-height: normal;
   text-transform: uppercase;
   font-family: var(--mainfont);
-    margin:1rem 0 .5rem 0;
+  margin: 1rem 0 0.5rem 0;
 }
 .--aboutmeinfo p {
   color: #000;
@@ -79,7 +80,7 @@ margin-top: 5rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-    margin: 0 0 1.5rem 0;
+  margin: 0 0 1.5rem 0;
 }
 .--aboutmeinfo a {
   color: #fff;
@@ -112,62 +113,63 @@ margin-top: 5rem;
   flex-direction: column;
   gap: 2rem;
 }
-.--main-productcontent{
-    display: flex;
+.--main-productcontent {
+  display: flex;
   align-items: center;
   justify-content: center;
-   flex-direction: column;
+  flex-direction: column;
   gap: 1rem;
 }
-.--product-header{
-    font-family: var(--mainfont);
-    font-size: 1.4rem;
-    font-weight: 600;
-    text-transform: uppercase;
+.--product-header {
+  font-family: var(--mainfont);
+  font-size: 1.4rem;
+  font-weight: 600;
+  text-transform: uppercase;
 }
-.--products{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1.7rem;
+.--products {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1.7rem;
 }
-.--product-card{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: column;
-    width: 256px;
-    height: 399px;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    transition: all 0.3s ease-in-out;
+.--product-card {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  width: 256px;
+  height: 399px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  transition: all 0.3s ease-in-out;
 }
 
-.--product-card h1{
-    font-size: 2rem;
-    font-family: var(--mainfont);
-    font-weight: 500;
-    text-transform: uppercase;
-    margin: 2rem 0 0 0;
+.--product-card h1 {
+  font-size: 2rem;
+  font-family: var(--mainfont);
+  font-weight: 500;
+  text-transform: uppercase;
+  margin: 2rem 0 0 0;
 }
-.--product-card span{
-    font-size: 2.2rem;
-    font-family: var(--mainfont);
-    font-weight: 700;
-    text-transform: uppercase;
-    margin: 0 0 1rem 0;
-    transform: translate(0, -10%);
-    transition: 0.3s ease-in-out;
+.--product-card span {
+  font-size: 2.2rem;
+  font-family: var(--mainfont);
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 0 0 1rem 0;
+  transform: translate(0, -10%);
+  transition: 0.3s ease-in-out;
 }
-.--product-card p{
-    font-family: var(--mainfont);
-    max-width: 186px;
+.--product-card p {
+  font-family: var(--mainfont);
+  max-width: 186px;
 }
-.--product-card ion-icon{
-    font-size: .8rem;
-    text-align: center;
-    color: #f15025;
-    margin-right: 3px;
+.--product-card ion-icon {
+  font-size: 0.8rem;
+  text-align: center;
+  color: #f15025;
+  margin-right: 3px;
 }
 
 .--product-card a {
@@ -184,18 +186,18 @@ margin-top: 5rem;
   padding: 15px 20px;
   margin-top: 1.5rem;
 }
-.--product-card:hover{
-    background-color: #f15025;
-    color: #fff;
+.--product-card:hover {
+  background-color: #f15025;
+  color: #fff;
 }
-.--product-card:hover ion-icon{
-    color: #fff;
+.--product-card:hover ion-icon {
+  color: #fff;
 }
-.--product-card:hover span{
-    transform: scale(1.5);
-    color: #fff;
+.--product-card:hover span {
+  transform: scale(1.5);
+  color: #fff;
 }
-.--product-card:hover a{
-    background-color: #fff;
-    color: #f15025;
+.--product-card:hover a {
+  background-color: #fff;
+  color: #f15025;
 }
