--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -49,7 +49,7 @@
   display: block;
   height: 3px;
   width: 30px;
-  background-color: #333;
+  background-color: var(--whitemain);
   border-radius: 2px;
 }
 
@@ -64,6 +64,7 @@
 }
 
 .hamburger.open .hamburger-line:nth-child(1) {
+  background-color: var(--blackmain);
   transform: rotate(45deg) translate(5px, 5px);
 }
 
@@ -72,14 +73,11 @@
 }
 
 .hamburger.open .hamburger-line:nth-child(3) {
+  background-color: var(--blackmain);
   transform: rotate(-45deg) translate(4px, -4px);
 }
 .--web-menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  gap: 31px;
+  display: none;
 }
 .--web-menu a {
   position: relative;
@@ -88,6 +86,17 @@
   font-weight: 500;
   line-height: normal;
   color: var(--greymain);
+}
+.--web-menu a.active::before {
+  position: absolute;
+  content: "";
+  bottom: -2px;
+  width: 0;
+  height: 2px;
+  background-color: var(--orangemain);
+  transition: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .--mobile-wrapper {
   position: fixed;
@@ -163,9 +172,21 @@
   border: none;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 769px) {
+  .--web-menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 31px;
+  }
   .menutoogler,
   .--mobile-wrapper {
     display: none;
+  }
+}
+@media only screen and (min-width: 500px) and (max-width: 768px) {
+  .--header-container {
+    padding: 1rem 2.5rem;
   }
 }
