--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -91,7 +91,7 @@
   position: absolute;
   content: "";
   bottom: -2px;
-  width: 0;
+  width: 50%;
   height: 2px;
   background-color: var(--orangemain);
   transition: 50%;
